# pixie-qa

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  skills-lock.json
.claude/skills/eval-driven-dev/: SKILL.md
.claude/skills/eval-driven-dev-workspace/: review-iteration-1.html  review-iteration-2.html  review-iteration-3.html  review-iteration-4.html  review-iteration-5.html  trigger-eval-set.json
.github/: copilot-instructions.md
.github/workflows/: daily-release.yml  publish.yml
changelogs/: async-handler-processing.md  autoevals-adapters.md  cli-dataset-commands.md  concurrent-eval-with-rate-limiting.md  config-driven-rate-limit-settings.md  dag-schema-name-identity-and-llm-flag.md  dag-validation-and-trace-check.md  dataset-management.md  dataset-runnable-and-default-evaluators.md  deep-research-demo.md  delivery-queue-context-compat.md  deterministic-analysis.md  docstring-and-readme-refresh.md  entry-kwargs-in-eval-input.md  eval-analysis-redesign.md  eval-driven-dev-step6-per-cycle-analysis.md  eval-harness.md  expected-output-in-evals.md  frontend-restructuring.md  instrumentation-module-implementation.md  llm-call-type-matching-and-init-improvements.md  loud-failure-mode.md  manual-instrumentation-usability.md  observation-store-implementation.md  observe-sensitive-field-stripping.md  pdoc-async-signatures.md  pdoc3-precommit-api-docs.md  pixie-directory-and-skill-improvements.md  pixie-init-command.md  pixie-start-readiness-race.md  pixie-test-e2e-suite.md  pytest-and-type-fixes.md  readme-rewrite.md  remove-scorecard-build-script-and-doc-cleanup.md  results-panel-ui-fixes.md  root-package-exports-and-trace-id.md  scorecard-branding-and-skill-version-check.md  scorecard-eval-detail-dialog.md  scorecard-redesign.md  simplify-dataset-eval-input.md  (+16 more)
demo/deep_research/: .gitignore  NOTICE  README.md  pyproject.toml  run.py
demo/deep_research/gpt_researcher/: agent.py  prompts.py
demo/deep_research/gpt_researcher/actions/: query_processing.py  retriever.py
demo/deep_research/gpt_researcher/config/: config.py
demo/deep_research/gpt_researcher/config/variables/: base.py  default.py
demo/deep_research/gpt_researcher/retrievers/: __init__.py  utils.py
demo/deep_research/gpt_researcher/scraper/: __init__.py  scraper.py  utils.py
demo/deep_research/gpt_researcher/skills/: researcher.py
demo/deep_research/gpt_researcher/utils/: enum.py
docs/: package.md
docs/pixie/: config.md  index.md  telemetry.md
docs/pixie/cli/: analyze_command.md  format_command.md  index.md  init_command.md  main.md  start_command.md  stop_command.md  test_command.md  trace_command.md
docs/pixie/eval/: agent_evaluator.md  evaluable.md  evaluation.md  index.md  llm_evaluator.md  rate_limiter.md  scorers.md
docs/pixie/harness/: index.md  run_result.md  runnable.md  runner.md  trace_capture.md
docs/skill-references/: evaluators.md  instrumentation-api.md  testing-api.md  wrap-api.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  webui.html
frontend/src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts  webui-main.tsx
pixie/: __init__.py  config.py  telemetry.py
pixie-ts/: README.md  package-lock.json  package.json
pixie-ts/src/: config.ts  index.ts
pixie-ts/tests/: agentEvaluator.test.ts  config.test.ts  e2e-pipeline.test.ts  e2e.test.ts  evaluable.test.ts  evaluation.test.ts  llmTracing.test.ts  models.test.ts  rateLimiter.test.ts  runResult.test.ts  runnable.test.ts  runner.test.ts  scorers.test.ts  wrap.test.ts
pixie/assets/: README.md  mock-data.json  webui.html
pixie/cli/: __init__.py  analyze_command.py  dag_command.py  dataset_command.py  format_command.py  init_command.py  main.py  start_command.py  stop_command.py  test_command.py  trace_command.py
pixie/dag/: __init__.py  trace_check.py
pixie/dataset/: __init__.py  models.py  store.py
pixie/eval/: __init__.py  agent_evaluator.py  dataset_runner.py  evaluable.py  evaluation.py  llm_evaluator.py  rate_limiter.py  scorers.py
pixie/evals/: __init__.py  criteria.py  dataset_runner.py  eval_utils.py  evaluation.py  llm_evaluator.py  rate_limiter.py  run_utils.py  runnable.py  runner.py  scorecard.py  scorers.py  test_result.py  trace_capture.py  trace_helpers.py
pixie/harness/: __init__.py  run_result.py  run_utils.py  runnable.py  runner.py  trace_capture.py
pixie/instrumentation/: __init__.py  context.py  handler.py  handlers.py  instrumentors.py  llm_tracing.py  models.py  observation.py  processor.py  queue.py  spans.py  trace_writer.py  wrap.py  wrap_log.py  wrap_processors.py  wrap_registry.py  wrap_serialization.py
pixie/storage/: __init__.py  evaluable.py  piccolo_conf.py  serialization.py  store.py  tables.py  tree.py
pixie/web/: __init__.py  _serve.py  app.py  server.py  watcher.py
scripts/: generate_api_docs.sh  generate_skill_docs.py
scripts/pdoc_templates/: text.mako
skills/eval-driven-dev/: SKILL.md
skills/qa-eval/: SKILL.md
specs/: agent-skill-1.md  agent-skill.md  api-docs-precommit.md  autoevals-adapters.md  dag-schema-and-trace-check.md  dataset-management.md  eval-analysis-revamp.md  evals-harness.md  evaluable-rfc.md  expected-output-in-evals.md  frontend-restructuring.md  instrumentation.md  manual-instrumentation-usability.md  readme-rewrite.md  reorganize-files.md  runnable-interface.md  scorecard-redesign.md  storage.md  test-harness-redesign.md  usability-utils.md  usage-tracking.md  web-server-lifecycle.md  web-ui.md  wrap-api-and-eval-redesign.md
tests/: README.md
tests/manual/: chatbot.py  mock_evaluators.py  test_sample.py  verify_runnable_e2e.py  verify_wrap_e2e.py
tests/pixie/: conftest.py  test_config.py  test_config_tracing.py  test_init.py  test_telemetry.py
ts/: README.md  package-lock.json  package.json  tsconfig.json
ts/src/: config.ts  index.ts
ts/tests/: config.test.ts  criteria.test.ts  datasetStore.test.ts  evaluable.test.ts  evaluation.test.ts  rateLimiter.test.ts  serialization.test.ts  spans.test.ts  traceHelpers.test.ts  tree.test.ts
(+398 files in other folders)
