[project]
name = "deep-research-demo"
version = "0.1.0"
description = "Simplified GPT Researcher demo for pixie-qa evaluation. Derived from https://github.com/assafelovic/gpt-researcher (Apache 2.0)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=23.2.1",
    "beautifulsoup4>=4.12.2",
    "colorama>=0.4.6",
    "ddgs>=6.1.0",
    "json-repair>=0.29.8",
    "langchain>=0.3.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "lxml>=4.9.2",
    "markdown>=3.5.1",
    "openai>=1.3.3",
    "pydantic>=2.5.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tiktoken>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gpt_researcher"]
